<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:gravity="center_horizontal|center_vertical|top"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <cz.ok1djo.remote4up4dar.SimpleDrawingView
                android:id="@+id/simpleDrawingView1"
                android:layout_width="256px"
                android:layout_height="128px"
                android:layout_gravity="top"
                android:layout_weight="1.0"
                android:layout_column="1"
                android:clickable="true" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="96dp"
                android:text="@string/textview"
                android:id="@+id/textView"
                android:layout_gravity="bottom"
                android:layout_weight="1.16"
                android:layout_column="2" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_light"
                android:id="@+id/toggleButtonLight"
                android:layout_gravity="center_vertical"
                android:layout_column="1"
                android:checked="true"
                android:textOff="@string/button_light"
                android:textOn="@string/button_light" />

            <SeekBar
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_column="2"
                android:max="100"
                android:progress="0" />

            <Button
                android:id="@+id/sendBtn"
                android:text="@string/button_refresh"
                android:layout_gravity="center_vertical"
                android:layout_column="3" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_column="4" />
        </TableRow>
    </TableLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ToggleButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="New ToggleButton"
                android:id="@+id/toggleButtonMute"
                android:layout_gravity="center_vertical"
                android:layout_column="1"
                android:checked="false"
                android:textOff="@string/button_mute"
                android:textOn="@string/button_mute" />

            <SeekBar
                android:layout_width="128dp"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar2"
                android:layout_column="2"
                android:progress="0"
                android:max="63" />
        </TableRow>

    </TableLayout>

    <EditText
        android:id="@+id/console"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.26"
        android:background="@android:color/black"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxWidth="100dp"
        android:text="@string/waiting"
        android:textColor="@android:color/white"
        android:textSize="10sp" >

        <requestFocus />
    </EditText>

</LinearLayout>